Added a container for Login
Created a container with leftcard and rightcard child

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 		<link rel="shortcut icon" href="../assets/Logo.png" type="image/x-icon" />
 		<title>Aroma Kitchen</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="left-card"></div>
+			<div class="rightcard"></div>
+		</div>
+	</body>
 </html>
