Remove the container
I need to create a new branch for the new feature.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,5 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Aroma Kitchen</title>
 	</head>
-	<body>
-		<div class="container">
-			<div class="left-card"></div>
-			<div class="rightcard"></div>
-		</div>
-	</body>
+	<body></body>
 </html>
