--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 		<link rel="stylesheet" href="style.css" />
 		<title>Aroma Kitchen</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<div class="left-card"></div>
+			<div class="right-card"></div>
+		</div>
+	</body>
 </html>
