Added the right-card images and finish the left card html

--- a/index.html
+++ b/index.html
@@ -20,9 +20,15 @@
 						name="username"
 						class="username"
 						placeholder="Your username" />
-					<input type="password" name="password" class="password" />
+					<input
+						type="password"
+						name="password"
+						class="password"
+						placeholder="Your password" />
+
 					<button type="submit">Login</button>
 				</form>
+				<p>Don't have an account? <a href="#">Sign up</a></p>
 			</div>
 			<div class="right-card"></div>
 		</div>
