Added the img in the right card

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 				</form>
 				<p>Don't have an account? <a href="#">Sign up</a></p>
 			</div>
-			<div class="right-card"></div>
+			<div class="right-card">
+				<img src="./assets/log-in-picture.png" alt="" />
+			</div>
 		</div>
 	</body>
 </html>
