Added a css variables
Added fonts and color in the root, add a font-family in the h1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div class="container">
 			<div class="left-card">
 				<img class="logo" src="./assets/Logo.png" alt="" />
-				<h1>Hey There!</h1>
+				<h1 class="title">Hey There!</h1>
 				<p>Login to get started in Aroma Kitchen</p>
 
 				<form action="" method="post">
@@ -26,7 +26,7 @@
 						class="password"
 						placeholder="Your password" />
 
-					<button type="submit">Login</button>
+					<button class="login-button" type="submit">Login</button>
 				</form>
 				<p>Don't have an account? <a href="#">Sign up</a></p>
 			</div>
