Fixed the rightcard img
Added a overflow-y in the container

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	</head>
 	<body>
 		<div class="container">
+			<!-- left-card -->
 			<div class="left-card">
 				<img class="logo" src="./assets/Logo.png" alt="" />
 				<h1 class="title">Hey There!</h1>
@@ -30,8 +31,9 @@
 				</form>
 				<p>Don't have an account? <a href="#">Sign up</a></p>
 			</div>
+			<!-- right-card -->
 			<div class="right-card">
-				<img src="./assets/log-in-picture.png" alt="" />
+				<img class="right-img" src="./assets/log-in-picture.png" alt="" />
 			</div>
 		</div>
 	</body>
