Added font style to the description

--- a/index.html
+++ b/index.html
@@ -12,24 +12,26 @@
 			<!-- left-card -->
 			<div class="left-card">
 				<img class="logo" src="./assets/Logo.png" alt="" />
-				<h1 class="title">Hey There!</h1>
-				<p>Login to get started in Aroma Kitchen</p>
+				<div class="login">
+					<h1 class="title">Hey There!</h1>
+					<p class="description">Login to get started in Aroma Kitchen</p>
 
-				<form action="" method="post">
-					<input
-						type="text"
-						name="username"
-						class="username"
-						placeholder="Your username" />
-					<input
-						type="password"
-						name="password"
-						class="password"
-						placeholder="Your password" />
+					<form action="" method="post">
+						<input
+							type="text"
+							name="username"
+							class="username"
+							placeholder="Your username" />
+						<input
+							type="password"
+							name="password"
+							class="password"
+							placeholder="Your password" />
 
-					<button class="login-button" type="submit">Login</button>
-				</form>
-				<p>Don't have an account? <a href="#">Sign up</a></p>
+						<button class="login-button" type="submit">Login</button>
+					</form>
+					<p>Don't have an account? <a href="#">Sign up</a></p>
+				</div>
 			</div>
 			<!-- right-card -->
 			<div class="right-card">
