Added a hover in the button and class

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 
 						<button class="login-button" type="submit">Login</button>
 					</form>
-					<p>Don't have an account? <a href="#">Sign up</a></p>
+					<p class="sign-up-link">
+						Don't have an account? <a href="#">Sign up</a>
+					</p>
 				</div>
 			</div>
 			<!-- right-card -->
