--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 							type="text"
 							name="username"
 							class="username"
-							placeholder="Your username" />
+							placeholder="Your username"
+							required />
 						<input
 							type="password"
 							name="password"
 							class="password"
-							placeholder="Your password" />
+							placeholder="Your password"
+							required />
 
 						<button class="login-button" type="submit">Login</button>
 					</form>
