Added a new file signup.html

--- a/signup.html
+++ b/signup.html
@@ -13,8 +13,8 @@
 			<div class="left-card">
 				<img class="logo" src="./assets/Logo.png" alt="" />
 				<div class="login">
-					<h1 class="title">Hey There!</h1>
-					<p class="description">Login to get started in Aroma Kitchen</p>
+					<h1 class="title">Welcome!</h1>
+					<p class="description">Signup to get started in Aroma Kitchen</p>
 
 					<form action="" method="post">
 						<input
@@ -30,16 +30,16 @@
 							placeholder="Your password"
 							required />
 
-						<button class="login-button" type="submit">Login</button>
+						<button class="login-button" type="submit">Sign up</button>
 					</form>
 					<p class="sign-up-link">
-						Don't have an account? <a href="./signup.html">Sign up</a>
+						Do you have an account? <a href="./index.html">Log in</a>
 					</p>
 				</div>
 			</div>
 			<!-- right-card -->
 			<div class="right-card">
-				<img class="right-img" src="./assets/log-in-picture.png" alt="" />
+				<img class="right-img" src="./assets/sign-up-picture.png" alt="" />
 			</div>
 		</div>
 	</body>
