--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="../assets/Logo.png" type="image/x-icon" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../style/style.css" />
 		<title>Aroma Kitchen</title>
 	</head>
 	<body>
 		<div class="container">
 			<!-- left-card -->
 			<div class="left-card">
-				<img class="logo" src="./assets/Logo.png" alt="" />
+				<img class="logo" src="../assets/Logo.png" alt="" />
 				<div class="login">
 					<h1 class="title">Welcome!</h1>
 					<p class="description">Signup to get started in Aroma Kitchen</p>
@@ -39,7 +39,7 @@
 			</div>
 			<!-- right-card -->
 			<div class="right-card">
-				<img class="right-img" src="./assets/sign-up-picture.png" alt="" />
+				<img class="right-img" src="../assets/sign-up-picture.png" alt="" />
 			</div>
 		</div>
 	</body>
