--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -4,12 +4,13 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="shortcut icon" href="../assets/Logo.png" type="image/x-icon" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../style/homepage.css" />
+		<script src="../js/app.js"></script>
 		<title>Aroma Kitchen</title>
 	</head>
 	<body>
 		<header>
-			<img src="./assets/Logo.png" alt="" />
+			<img src="../assets/Logo.png" alt="" />
 			<nav>
 				<ul class="nav-links">
 					<li><a href="#">Saved Recipes</a></li>
@@ -19,12 +20,11 @@
 			</nav>
 			<div class="dropdown">
 				<button onclick="myFunction()" class="dropbtn">
-					<img src="/assets/Logo.png" alt="" />
+					<!-- <img src="/assets/Logo.png" alt="" /> -->lol
 				</button>
 				<div id="myDropdown" class="dropdown-content">
-					<a href="#home">Home</a>
-					<a href="#about">About</a>
-					<a href="#contact">Contact</a>
+					<a href="#home">Profile</a>
+					<a href="#about">Logout</a>
 				</div>
 			</div>
 		</header>
