Change the BGimage in profile

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -10,7 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<img src="../assets/Logo.png" alt="" />
+			<img class="logo" src="../assets/Logo.png" alt="" />
 			<nav>
 				<ul class="nav-links">
 					<li><a href="#">Saved Recipes</a></li>
@@ -19,11 +19,9 @@
 				</ul>
 			</nav>
 			<div class="dropdown">
-				<button onclick="myFunction()" class="dropbtn">
-					<!-- <img src="/assets/Logo.png" alt="" /> -->lol
-				</button>
+				<button onclick="myFunction()" class="dropbtn"></button>
 				<div id="myDropdown" class="dropdown-content">
-					<a href="#home">Profile</a>
+					<a href="#home">Change profile</a>
 					<a href="#about">Logout</a>
 				</div>
 			</div>
