Added a image for the search section
Create a search section in the homepage.html

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -26,5 +26,14 @@
 				</div>
 			</div>
 		</header>
+		<section class="search-sec">
+			<h1 class="title-search">What Do You Want To Cook Today?</h1>
+			<input
+				type="search"
+				name="search"
+				class="search"
+				id="search"
+				placeholder="Find a recipe.." />
+		</section>
 	</body>
 </html>
