--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -40,5 +40,8 @@
 			</form>
 		</section>
 		<section class="recipe-sec"></section>
+		<footer class="footer-sec">
+			<img class="logo-footer" src="../assets/Logo.png" alt="" />
+		</footer>
 	</body>
 </html>
