--- a/pages/signup.html
+++ b/pages/signup.html
@@ -33,7 +33,7 @@
 						<button class="login-button" type="submit">Sign up</button>
 					</form>
 					<p class="sign-up-link">
-						Do you have an account? <a href="./index.html">Log in</a>
+						Do you have an account? <a href="../index.html">Log in</a>
 					</p>
 				</div>
 			</div>
