--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="../assets/Logo.png" type="image/x-icon" />
-		<link rel="stylesheet" href="/style/style.css" />
+		<link rel="shortcut icon" href="./assets/Logo.png" type="image/x-icon" />
+		<link rel="stylesheet" href="./style/style.css" />
 		<title>Aroma Kitchen</title>
 	</head>
 	<body>
 		<div class="container">
 			<!-- left-card -->
 			<div class="left-card">
-				<img class="logo" src="../assets/Logo.png" alt="" />
+				<img class="logo" src="./assets/Logo.png" alt="" />
 				<div class="login">
 					<h1 class="title">Hey There!</h1>
 					<p class="description">Login to get started in Aroma Kitchen</p>
@@ -33,13 +33,13 @@
 						<button class="login-button" type="submit">Login</button>
 					</form>
 					<p class="sign-up-link">
-						Don't have an account? <a href="./signup.html">Sign up</a>
+						Don't have an account? <a href="./pages/signup.html">Sign up</a>
 					</p>
 				</div>
 			</div>
 			<!-- right-card -->
 			<div class="right-card">
-				<img class="right-img" src="../assets/log-in-picture.png" alt="" />
+				<img class="right-img" src="./assets/log-in-picture.png" alt="" />
 			</div>
 		</div>
 	</body>
