--- a/pages/savedrecipe.html
+++ b/pages/savedrecipe.html
@@ -13,7 +13,9 @@
 			<img class="logo" src="../assets/Logo.png" alt="" />
 			<nav>
 				<ul class="nav-links">
-					<li><a id="in-page" href="#">Saved Recipes</a></li>
+					<li>
+						<a id="in-page" href="../pages/savedrecipe.html">Saved Recipes</a>
+					</li>
 					<li><a href="#">Create recipe</a></li>
 					<li><a href="#">About us</a></li>
 				</ul>
