Added a link to the image logo linked to the homepage

--- a/pages/savedrecipe.html
+++ b/pages/savedrecipe.html
@@ -10,7 +10,9 @@
 	</head>
 	<body>
 		<header>
-			<img class="logo" src="../assets/Logo.png" alt="" />
+			<a href="../pages/homepage.html"
+				><img class="logo" src="../assets/Logo.png" alt=""
+			/></a>
 			<nav>
 				<ul class="nav-links">
 					<li>
