Added a recipe-saved-data section
This section will store the saved recipe

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -10,9 +10,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="../pages/homepage.html"
-				><img class="logo" src="../assets/Logo.png" alt=""
-			/></a>
+			<img class="logo" src="../assets/Logo.png" alt="" />
 			<nav>
 				<ul class="nav-links">
 					<li><a href="../pages/savedrecipe.html">Saved Recipes</a></li>
@@ -38,7 +36,7 @@
 					class="search"
 					id="search"
 					placeholder="Find a recipe.." />
-				<button class="btn-search" type="submit">search</button>
+				<button class="btn-search" type="submit">Search</button>
 			</form>
 		</section>
 		<section class="recipe-sec"></section>
