--- a/pages/savedrecipe.html
+++ b/pages/savedrecipe.html
@@ -10,9 +10,8 @@
 	</head>
 	<body>
 		<header>
-			<a href="../pages/homepage.html"
-				><img class="logo" src="../assets/Logo.png" alt=""
-			/></a>
+			<img class="logo" src="../assets/Logo.png" alt="" />
+
 			<nav>
 				<ul class="nav-links">
 					<li>
