Added a footer in the savedrecipe

--- a/pages/savedrecipe.html
+++ b/pages/savedrecipe.html
@@ -55,5 +55,8 @@
 			></a>
 		</section>
 		<section class="saved-recipe-data"></section>
+		<footer class="footer-sec">
+			<img class="logo-footer" src="../assets/Logo.png" alt="" />
+		</footer>
 	</body>
 </html>
