Added navbar, createrecipe section and footer
this is just the same code in the savedrecipe

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -14,7 +14,7 @@
 			<nav>
 				<ul class="nav-links">
 					<li><a href="../pages/savedrecipe.html">Saved Recipes</a></li>
-					<li><a href="#">Create recipe</a></li>
+					<li><a href="../pages/createrecipe.html">Create recipe</a></li>
 					<li><a href="#">About us</a></li>
 				</ul>
 			</nav>
