Change the "in-page" id to the create recipe
to show to the users what page is clicked

--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -15,9 +15,9 @@
 			<nav>
 				<ul class="nav-links">
 					<li>
-						<a id="in-page" href="../pages/savedrecipe.html">Saved Recipes</a>
+						<a href="../pages/savedrecipe.html">Saved Recipes</a>
 					</li>
-					<li><a href="#">Create recipe</a></li>
+					<li><a id="in-page" href="#">Create recipe</a></li>
 					<li><a href="#">About us</a></li>
 				</ul>
 			</nav>
