--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -30,7 +30,7 @@
 			</div>
 		</header>
 		<section class="banner-sec">
-			<h1 class="saved-recipe-title">Create recipes</h1>
+			<h1 class="saved-recipe-title">Create Recipe</h1>
 			<a class="back-saved-recipe" href="../pages/homepage.html"
 				>Back
 				<svg
