Remove the styles of navbar

--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -11,6 +11,11 @@
 	<body>
 		<header>
 			<img class="logo" src="../assets/Logo.png" alt="" />
+			<a href="" class="toggle-button">
+				<span class="bar"></span>
+				<span class="bar"></span>
+				<span class="bar"></span>
+			</a>
 			<nav>
 				<ul class="nav-links">
 					<li><a href="../pages/savedrecipe.html">Saved Recipes</a></li>
