--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -8,29 +8,30 @@
 		<script src="../js/app.js"></script>
 		<title>Aroma Kitchen</title>
 	</head>
+	<!-- <img class="logo" src="../assets/Logo.png" alt="" />
+	<div class="dropdown">
+		<button onclick="myFunction()" class="dropbtn"></button>
+		<div id="myDropdown" class="dropdown-content">
+			<a href="#home">Change profile</a>
+			<a href="#about">Logout</a>
+		</div>
+	</div> -->
 	<body>
-		<header>
-			<img class="logo" src="../assets/Logo.png" alt="" />
-			<a href="" class="toggle-button">
+		<nav class="navbar">
+			<div class="brand-title">Brand Name</div>
+			<a href="#" class="toggle-button">
 				<span class="bar"></span>
 				<span class="bar"></span>
 				<span class="bar"></span>
 			</a>
-			<nav>
-				<ul class="nav-links">
-					<li><a href="../pages/savedrecipe.html">Saved Recipes</a></li>
-					<li><a href="../pages/createrecipe.html">Create recipe</a></li>
-					<li><a href="#">About us</a></li>
+			<div class="navbar-links">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
 				</ul>
-			</nav>
-			<div class="dropdown">
-				<button onclick="myFunction()" class="dropbtn"></button>
-				<div id="myDropdown" class="dropdown-content">
-					<a href="#home">Change profile</a>
-					<a href="#about">Logout</a>
-				</div>
 			</div>
-		</header>
+		</nav>
 		<section class="search-sec">
 			<h1 class="title-search">What Do You Want To Cook Today?</h1>
 			<form action="">
