Create mobile responsive for nav bar and search
except for the createrecipe

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
 
 						<button class="login-button" type="submit">Login</button>
 					</form>
-					<p class="sign-up-link">
+					<!-- <p class="sign-up-link">
 						Don't have an account? <a href="./pages/signup.html">Sign up</a>
+					</p> -->
+					<p class="sign-up-link">
+						Don't have an account? <a href="./pages/homepage.html">Sign up</a>
 					</p>
 				</div>
 			</div>
