Finish doing the mobile device of create recipe

--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -19,8 +19,12 @@
 			</a>
 			<div class="navbar-links">
 				<ul>
-					<li><a href="../pages/savedrecipe.html">Saved recipes</a></li>
-					<li><a href="../pages/createrecipe.html">Create recipes</a></li>
+					<li>
+						<a href="../pages/savedrecipe.html">Saved recipes</a>
+					</li>
+					<li>
+						<a id="in-page" href="../pages/createrecipe.html">Create recipes</a>
+					</li>
 					<li><a href="#">About us</a></li>
 					<div class="dropdown">
 						<button onclick="myFunction()" class="dropbtn"></button>
@@ -61,46 +65,42 @@
 			<form action="" method="post">
 				<div class="title-input-section">
 					<label class="label-input">Title of Dish:</label>
-					<input type="text" name="title-dish" id="title-dish" />
+					<input
+						type="text"
+						name="title-dish"
+						class="title-dish"
+						minlength="20"
+						maxlength="20"
+						size="10"
+						id="title-dish"
+						required />
 				</div>
 				<div class="picture-input-section">
 					<label class="label-input">Picture of Dish:</label>
-					<input type="file" name="picture-dish" id="picture-dish" />
+					<input type="file" name="picture-dish" id="picture-dish" required />
 				</div>
 				<!-- TYPE DISH -->
 				<label class="label-input added">Type of Dish:</label>
 				<div class="type-input-section">
-					<input type="radio" name="type-dish" id="type-dish1" />
+					<input type="radio" name="type-dish" id="type-dish1" required />
 					<label for="type-dish1">Breakfast</label>
 
-					<input type="radio" name="type-dish" id="type-dish2" />
+					<input type="radio" name="type-dish" id="type-dish2" required />
 					<label for="type-dish2">Lunch</label>
 
-					<input type="radio" name="type-dish" id="type-dish3" />
+					<input type="radio" name="type-dish" id="type-dish3" required />
 					<label for="type-dish3">Dinner</label>
 
-					<input type="radio" name="type-dish" id="type-dish4" />
+					<input type="radio" name="type-dish" id="type-dish4" required />
 					<label for="type-dish4">Vegan</label>
 				</div>
 				<div class="description-input-section">
 					<label for="description">Description</label>
-					<textarea
-						id="freeform"
-						name="freeform"
-						rows="4"
-						cols="50"
-						placeholder="What is your Introduction about your Dish?">
-					</textarea>
+					<textarea id="freeform" name="freeform" required> </textarea>
 				</div>
 				<div class="steps-input-section">
 					<label for="steps">Steps</label>
-					<textarea
-						id="freeform"
-						name="freeform"
-						rows="4"
-						cols="50"
-						placeholder="lol">
-					</textarea>
+					<textarea id="freeform" name="freeform" required> </textarea>
 				</div>
 				<div class="submit-cancel">
 					<button type="reset">Cancel</button>
