--- a/pages/savedrecipe.html
+++ b/pages/savedrecipe.html
@@ -19,7 +19,9 @@
 			</a>
 			<div class="navbar-links">
 				<ul>
-					<li><a href="../pages/savedrecipe.html">Saved recipes</a></li>
+					<li>
+						<a id="in-page" href="../pages/savedrecipe.html">Saved recipes</a>
+					</li>
 					<li><a href="../pages/createrecipe.html">Create recipes</a></li>
 					<li><a href="#">About us</a></li>
 					<div class="dropdown">
