Change the link of logout button
from index.html to index.php.
the index change to php for the backend

--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -30,7 +30,7 @@
 						<button onclick="myFunction()" class="dropbtn"></button>
 						<div id="myDropdown" class="dropdown-content">
 							<a href="#home">Change profile</a>
-							<a href="../index.html">Logout</a>
+							<a href="../index.php">Logout</a>
 						</div>
 					</div>
 				</ul>
