--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="../assets/Logo.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="./assets/Logo.png" type="image/x-icon" />
 		<link rel="stylesheet" href="../style/homepage.css" />
 		<script src="../js/app.js"></script>
 		<script src="../js/hamburger.js"></script>
@@ -20,13 +20,10 @@
 			<div class="navbar-links">
 				<ul>
 					<li>
-						<a href="../pages/savedrecipe.html">Recipes</a>
+						<a id="in-page" href="../pages/recipe.html">Recipes</a>
 					</li>
 
-					<li>
-						<a id="in-page" href="../pages/createrecipe.html">Create recipes</a>
-					</li>
-
+					<li><a href="#">About us</a></li>
 					<div class="dropdown">
 						<button onclick="myFunction()" class="dropbtn"></button>
 						<div id="myDropdown" class="dropdown-content">
@@ -38,77 +35,9 @@
 			</div>
 		</nav>
 		<section class="banner-sec">
-			<h1 class="saved-recipe-title">Create Recipe</h1>
-			<a class="back-saved-recipe" href="../pages/homepage.html"
-				>Back
-				<svg
-					class="back-arrow-saved"
-					xmlns="http://www.w3.org/2000/svg"
-					width="37"
-					height="37"
-					viewBox="0 0 37 37"
-					fill="none">
-					<path
-						d="M30.5312 18.5382L6.46887 18.4618"
-						stroke="black"
-						stroke-width="3"
-						stroke-linecap="round"
-						stroke-linejoin="round" />
-					<path
-						d="M16.2812 28.3368L6.46879 18.4618L16.3437 8.64935"
-						stroke="black"
-						stroke-width="3"
-						stroke-linecap="round"
-						stroke-linejoin="round" /></svg
-			></a>
+			<h1 class="saved-recipe-title">Recipes</h1>
 		</section>
-		<section class="create-recipe-sec">
-			<form action="" method="post">
-				<div class="title-input-section">
-					<label class="label-input">Title of Dish:</label>
-					<input
-						type="text"
-						name="title-dish"
-						class="title-dish"
-						minlength="20"
-						maxlength="20"
-						size="10"
-						id="title-dish"
-						required />
-				</div>
-				<div class="picture-input-section">
-					<label class="label-input">Picture of Dish:</label>
-					<input type="file" name="picture-dish" id="picture-dish" required />
-				</div>
-				<!-- TYPE DISH -->
-				<label class="label-input added">Type of Dish:</label>
-				<div class="type-input-section">
-					<input type="radio" name="type-dish" id="type-dish1" required />
-					<label for="type-dish1">Breakfast</label>
-
-					<input type="radio" name="type-dish" id="type-dish2" required />
-					<label for="type-dish2">Lunch</label>
-
-					<input type="radio" name="type-dish" id="type-dish3" required />
-					<label for="type-dish3">Dinner</label>
-
-					<input type="radio" name="type-dish" id="type-dish4" required />
-					<label for="type-dish4">Vegan</label>
-				</div>
-				<div class="description-input-section">
-					<label for="description">Description</label>
-					<textarea id="freeform" name="freeform" required> </textarea>
-				</div>
-				<div class="steps-input-section">
-					<label for="steps">Steps</label>
-					<textarea id="freeform" name="freeform" required> </textarea>
-				</div>
-				<div class="submit-cancel">
-					<button type="reset">Cancel</button>
-					<button type="submit">Submit</button>
-				</div>
-			</form>
-		</section>
+		<section class="saved-recipe-data"></section>
 		<footer class="footer-sec">
 			<img class="logo-footer" src="../assets/Logo.png" alt="" />
 		</footer>
