--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -35,7 +35,7 @@
 		</nav>
 		<section class="banner-sec">
 			<h1 class="saved-recipe-title">Create Recipe</h1>
-			<a class="back-saved-recipe" href="../pages/homepage.html"
+			<a class="back-saved-recipe" href="../pages/recipes.html"
 				>Back
 				<svg
 					class="back-arrow-saved"
