Added a listuser.html page
for the admin, to list all of the users

--- a/pages/createrecipe.html
+++ b/pages/createrecipe.html
@@ -20,6 +20,12 @@
 			<div class="navbar-links">
 				<ul>
 					<li>
+						<a href="../pages/admin.html">Recipes</a>
+					</li>
+					<li>
+						<a href="../pages/listuser.html">Users</a>
+					</li>
+					<li>
 						<a id="in-page" href="../pages/createrecipe.html">Create recipes</a>
 					</li>
 
@@ -35,7 +41,7 @@
 		</nav>
 		<section class="banner-sec">
 			<h1 class="saved-recipe-title">Create Recipe</h1>
-			<a class="back-saved-recipe" href="../pages/recipes.html"
+			<a class="back-saved-recipe" href="../pages/admin.html"
 				>Back
 				<svg
 					class="back-arrow-saved"
