--- a/pages/listuser.html
+++ b/pages/listuser.html
@@ -20,10 +20,10 @@
 			<div class="navbar-links">
 				<ul>
 					<li>
-						<a id="in-page" href="../pages/admin.html">Recipes</a>
+						<a href="../pages/admin.html">Recipes</a>
 					</li>
 					<li>
-						<a href="../pages/listuser.html">Users</a>
+						<a id="in-page" href="../pages/listuser.html">Users</a>
 					</li>
 					<li>
 						<a href="../pages/createrecipe.html">Create recipes</a>
@@ -40,7 +40,7 @@
 			</div>
 		</nav>
 		<section class="banner-sec">
-			<h1 class="saved-recipe-title">Recipes</h1>
+			<h1 class="saved-recipe-title">Users</h1>
 		</section>
 		<section class="saved-recipe-data"></section>
 		<footer class="footer-sec">
